--- a/homepage/app/package.json
+++ b/homepage/app/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "app",
   "private": true,
@@ -16,10 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "react": "^18.3.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "axios": "^1.7.8",
     "dayjs": "^1.11.13",
     "prop-types": "^15.8.1",
+    "react": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "sweetalert2": "^11.14.5"
   },
