--- a/adminpage/app/package.json
+++ b/adminpage/app/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.5.3",
